k8s/apps/truenas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: truenas
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
---
